--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,26 @@ server:
   error:
     whitelabel:
       enabled: true
-  port: 8081
+  port: 8080
 
 spring:
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          issuer-uri: http://localhost:8080/auth/
   kafka:
-    bootstrap-servers: "172.26.137.29:9092"
+    bootstrap-servers: #host:port
     consumer:
       group-id: "myGroup"
 
-myproject:
-  send-topics: my-topics
-  reply-topics: my-topics-reply
-  consumer-group: my-kafka-group
+app:
+  security:
+    jwt:
+      keystore-location: keys/cnat-jwt-signing.jks
+      password: #password
+      key-alias: jwtsigning
+      passphrase: #passphrase
+  kafka:
+    topics:
+      tracker-data-register: tracker-data-register
