--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,7 @@ app:
   cnat:
     user-service: http://localhost:8082
     tracker-service: http://localhost:8081
+
+springdoc:
+  api-docs:
+    path: /api-docs
