--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 server:
-  error:
-    whitelabel:
-      enabled: true
   port: 8080
+  error:
+    include-message: always
+
+#logging:
+#  level:
+#    org.springframework.security.web: DEBUG
 
 spring:
   kafka:
