--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 80
   error:
     include-message: always
 
@@ -9,7 +9,7 @@ server:
 
 spring:
   kafka:
-    bootstrap-servers: #host:9092
+    bootstrap-servers: ${CNAT_KAFKA_URI}
     consumer:
       group-id: "myGroup"
     producer:
@@ -27,12 +27,9 @@ app:
     topics:
       tracker-data-register: tracker-data-register
   cnat:
-    # user-service: http://cnat-user-service-nodeport:8082
-    # tracker-service: http://cnat-tracker-service-nodeport:8081
-    # web-app: http://cnat-web-app-nodeport:3000
-    user-service: http://localhost:8082
-    tracker-service: http://localhost:8081
-    web-app: http://localhost:3000
+    tracker-service: ${CNAT_TRACKER_SERVICE_URI}
+    user-service: ${CNAT_USER_SERVICE_URI}
+    web-app: http://localhost:30080
 
 springdoc:
   api-docs:
