Add env variables

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,11 +10,15 @@ server:
 spring:
   kafka:
     bootstrap-servers: ${CNAT_KAFKA_URI}
-    consumer:
-      group-id: "myGroup"
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring:
+          json:
+            add:
+              type:
+                headers: false
 
 app:
   security:
@@ -25,11 +29,11 @@ app:
       passphrase: ${CNAT_API_GATEWAY_JWT_KEY_PASSWORD}
   kafka:
     topics:
-      tracker-data-register: tracker-data-register
+      tracker-data-register: ${CNAT_KAFKA_TRACKER_DATA_TOPIC}
   cnat:
     tracker-service: ${CNAT_TRACKER_SERVICE_URI}
     user-service: ${CNAT_USER_SERVICE_URI}
-    web-app: http://localhost:30080
+    web-app: ${CNAT_WEB_APP_ORIGIN}
 
 springdoc:
   api-docs:
